优化部分代码 将娱乐功能从fun移动到func 新增判断谷歌版本的方法